--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,5 +60,6 @@ features = [
     "Win32_System_Memory",
     "Win32_System_SystemServices",
     "Win32_UI_Shell",
+    "Win32_UI_Shell_Common",
     "Win32_UI_WindowsAndMessaging",
 ]
